feat:cheack rag-systems

--- a/chunks_output/chunk_000002.md
+++ b/chunks_output/chunk_000002.md
@@ -1,21 +1,11 @@
 # Chunk 2
 
-سیستم را بهبود دهد.
-# معرفی
-	در Langfuse دو ساختار داده‌ای بنیادین به نام‌های Trace و Observation وجود دارد.
-## Traces - سطح بالای ظرف‌ها  
-Traces بالاترین سطح جریان اجرای برنامه شما را نمایش می‌دهند. یک Trace نمایانگر کل مسیر و جریان اجرای یک درخواست یا عملیات است که به‌صورت جامع تمام مراحل، ورودی‌ها، خروجی‌ها و رویدادهای مرتبط را در بر می‌گیرد. یک trace شامل موارد زیر است:
-زمینه نشست و کاربر: sessionId و userId برای گروه‌بندی تعاملات مرتبط (تصویر 1)
-تصویر 1
-فراداده برنامه:  شامل اطلاعات SDK و نسخه پایتون و فراداده‌های تعریف شده توسط کاربر (مانند temperature در تصویر 2 که توسط کاربر به فراداده اضافه شده است)
-تصویر 2
-ورودی/خروجی کلی: درخواست/پاسخ کامل برای کل جریان (تصویر 3)
-تصویر 3
-تصویر 4
-برچسب‌ها و قابلیت مشاهده: tags برای دسته‌بندی و امکان اشتراک‌گذاری (تصویر 5)
-تصویر 5
-## Observations - گام‌های اجرایی  
-Observations مراحل یا عملیات‌های منفرد درون یک trace هستند.
+ard | SPAN | اختیاری | سوال کاربر   (user_query: str)
+تاریخچه سوالات کاربر (history: list) | آیا ورودی غیرمجاز است؟ (is_illegal: bool)
+علت غیرمجاز بودن ورودی  (reason: str) | 1 |
+| 6 | prepare_for_generation** |
+
+---
 
 ---
 
